refactor: refinamento do fluxo JS, loading e feedback visual

--- a/ProjectAutoU/frontend/index.html
+++ b/ProjectAutoU/frontend/index.html
@@ -54,7 +54,7 @@
                     <div class="input-field hidden" id="file-field">
                         <label>Upload de Arquivo:</label>
                         <div class="file-container">
-                            <input type="file" id="file" accept=".txt,.pdf">
+                            <input type="file" id="file" accept=".txt">
                             <div class="file-wrapper">
                                 <label for="file" class="file-label" id="file-label">Selecionar Arquivo</label>
                                 <button type="button" class="remove-btn hidden" id="remove-file" title="Remover arquivo">×</button>
